--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 {
-  "Visibility": "GONE",
+  "Visibility": "VISIBLE",
   "Title": "Feliz Día de los Padres!",
   "Description": "Quiero escribirte algo bonito en este día y solo me salen 3 palabras, Te Quiero PAPÁ",
   "MainTextButton": "Update",
