--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 {
   "Visibility": "VISIBLE",
   "Title": "Feliz Día de los Padres!",
-  "Description": "Quiero escribirte algo bonito en este día y solo me salen 3 palabras, Te Quiero PAPÁ",
+  "Description": "400 CUP",
   "MainTextButton": "Update",
   "Cancelable": true,
   "CancelButtonText": "Cancel",
