--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 {
   "Visibility": "VISIBLE",
-  "Title": "Feliz Día de los Padres!",
+  "Title": "Por ahora no tengo FIFA y GTA V",
   "Description": "400 CUP",
   "MainTextButton": "Update",
   "Cancelable": true,
