--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 {
-  "Visibility": "VISIBLE",
+  "Visibility": "GONE",
   "Title": "Por ahora no tengo FIFA y GTA V",
-  "Description": "400 CUP",
+  "Description": "300 CUP",
   "MainTextButton": "Update",
   "Cancelable": true,
   "CancelButtonText": "Cancel",
