--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 {
   "Visibility": "VISIBLE",
-  "Title": "Por ahora no tengo FIFA y GTA V",
+  "Title": "¡ NUEVA ACTUALIZACIÓN ! v2.5",
   "Description": "300 CUP",
   "MainTextButton": "Update",
   "Cancelable": true,
