--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 {
-  "Visibility": "VISIBLE",
+  "Visibility": "GONE",
   "Title": "Por ahora no tengo FIFA y GTA V",
   "Description": "300 CUP",
   "MainTextButton": "Update",
