--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 {
   "Visibility": "VISIBLE",
-  "Title": "MAURO cabeza de pinga",
-  "Description": "400 CUP",
+  "Title": "Por ahora no tengo FIFA y GTA V",
+  "Description": "300 CUP",
   "MainTextButton": "Update",
   "Cancelable": true,
   "CancelButtonText": "Cancel",
