--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 {
-  "Visibility": "VISIBLE",
-  "Title": "Por ahora no tengo FIFA y GTA V",
-  "Description": "300 CUP",
+  "Visibility": "VISIB",
+  "Title": "Bienvenido a nuestras notificaciones",
+  "Description": "Esto es una prueba más de las notificaciones en línea",
   "MainTextButton": "Update",
   "Cancelable": true,
   "CancelButtonText": "Cancel",
