--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 {
-  "Visibility": "VISIB",
+  "Visibility": "VISIBLE",
   "Title": "Bienvenido a nuestras notificaciones",
   "Description": "Esto es una prueba más de las notificaciones en línea",
   "MainTextButton": "Update",
