--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 {
   "Visibility": "VISIBLE",
-  "Title": "Bienvenido a nuestras notificaciones",
-  "Description": "Esto es una prueba más de las notificaciones en línea",
+  "Title": "Bienvenido a nuestra Tienda Virtual",
+  "Description": "Espero que le guste nuestras Ropas y Ofertas",
   "MainTextButton": "Update",
   "Cancelable": true,
   "CancelButtonText": "Cancel",
