--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 {
-  "Visibility": "VISIB",
+  "Visibility": "VISIBLE",
   "Title": "Bienvenido a nuestra Tienda Virtual",
   "Description": "Espero que le guste nuestras Ropas y Ofertas",
   "MainTextButton": "Update",
